# tme-cell-state-annotation-benchmark

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run_all.sh
config/: config.yaml
docs/: 00_pipeline_overview.md  01_data_acquisition.md  02_preprocessing.md  03_celltypist.md  04_scgpt.md  05_singler.md  06_azimuth.md  07_gptcelltype.md  08_scatomic.md  09_metrics.md  10_figures.md  README.md  data_download.md  project_guide.md
envs/: environment.yml  install_r.R
scripts/: 00_download_data.py  01_preprocess.py  02_run_celltypist.py  03_run_scgpt.py  04_compute_metrics.py  05_make_figures.py  common.R  common.py  run_azimuth.R  run_gptcelltype.R  run_scatomic.R  run_singler.R
scripts/python/: 00_download_data.py  01_preprocess.py  02_run_celltypist.py  03_run_scgpt.py  04_compute_metrics.py  05_make_figures.py  common.py
scripts/r/: common.R  run_azimuth.R  run_gptcelltype.R  run_scatomic.R  run_singler.R
